services/parrot-auth/k8s/hydra-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ory-hydra
  labels:
    app: ory-hydra
spec:
  clusterIP: None
  ports:
    - port: 4444
      name: public-port
    - port: 4445
      name: admin-port
  selector:
    app: ory-hydra
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ory-hydra
  labels:
    app: ory-hydra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ory-hydra
  template:
    metadata:
      labels:
        app: ory-hydra
    spec:
      containers:
      - name: ory-hydra
        image: oryd/hydra:v1.10.3-sqlite
        ports:
        - containerPort: 4444
          name: public-port
        - containerPort: 4445
          name: admin-port
