services/parrot-auth/k8s/kratos-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ory-kratos-service
  labels:
    app: ory-kratos
spec:
  clusterIP: None
  ports:
    - port: 4433
      targetPort: 4433
      name: public-port
    - port: 4434
      targetPort: 4434
      name: admin-port
  selector:
    app: ory-kratos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ory-kratos
  labels:
    app: ory-kratos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ory-kratos
  template:
    metadata:
      labels:
        app: ory-kratos
    spec:
      containers:
      - name: ory-kratos
        image: oryd/kratos:v0.7-sqlite
        readinessProbe:
          httpGet:
            port: public-port
            path: /health/ready
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            port: public-port
            path: /health/alive
          initialDelaySeconds: 5
          periodSeconds: 5
        args:
          - serve
          - --config
          - /etc/config/kratos/kratos.yaml
          - --dev
          - --watch-courier
        ports:
          - containerPort: 4433
            name: public-port
          - containerPort: 4434
            name: admin-port
        volumeMounts:
          - name: kratos-config
            mountPath: /etc/config/kratos
      volumes:
        - name: kratos-config
          configMap:
            name: kratos-configmap
